# ChatAI

./: README.md  pyproject.toml
data/: histoire_horde.txt
notebooks/: langchain.ipynb  openai.ipynb
src/api/: chain.py  main.py  prompts.py
src/streamlit/: app.py
tests/: test_api_functions.py
