[project]
name = "chatai"
version = "0.1.0"
description = "Chatbot with fastApi, langchain, openAi and streamlit"
authors = [
    {name = "Guillaume Ayrault",email = "guillaumeayrault02@gmail.com"}
]
readme = "README.md"
requires-python = "3.9.21"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.68.2,<2.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.9,<0.4.0)",
    "langgraph (>=0.3.18,<0.4.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "streamlit (>=1.43.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

